[Resume] fix align

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,6 +9,11 @@ body {
     height: 100%;
 }
 
+.navbar-toggle {
+    margin-top: 20px;
+    margin-bottom: 16px;
+}
+
 .navbar-nav li a {
     font-size: large;
     padding-top: 30px;
@@ -41,10 +46,12 @@ body {
 .panel-bg {
     width: 100%;
     height: 100%;
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding: 10% 15%;
+}
+@media only screen and (max-device-width: 900px) {
+    .panel-bg {
+        padding: 10% 5%;
+    }
 }
 .panel-color {
     background-color: rgb(10, 10, 10, 0.5)
@@ -53,4 +60,12 @@ body {
 /* Resume */
 .resume-info {
     font-size: x-large;
+}
+@media only screen and (max-device-width: 900px) {
+    .resume-info {
+        font-size: medium;
+    }
+}
+.resume-img {
+    border-radius: 6px;
 }
